// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered"
  id="default"
>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.title - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered"
  id="properties.title"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        Card block
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;
